syntax = "proto3";

package gamepacket;
option go_package = "gosocket/gamepacket";

message GamePacket {
  uint32 seq = 1;
  HandshakeRequest handshake_request = 2;
  HandshakeResponse handshake_response = 3;
  Heartbeat heartbeat = 4;
  HeartbeatAck heartbeat_ack = 5;
  ClientPosition ClientPosition = 6;
  ChatMessage chat_message = 7;
  LobbyJoinBroadcast lobby_join_broadcast = 8;
  ServerStatus server_status = 99;
}

message HandshakeRequest {
  string clientName = 1; // optional nickname from client
}

message HandshakeResponse {
  string privateId = 1;
  string publicId = 2;
}

message LobbyJoinBroadcast {
  string publicId = 1;
  string colorHex = 2;
}

message ClientPosition {
  string clientId = 1; // who sent this
  float x = 2;
  float y = 3;
  float z = 4;
}

message ChatMessage {
  string clientId = 1; // who said it
  string message = 2;
}

message Heartbeat {
  string clientId = 1;
}

message HeartbeatAck {
    string client_id = 1;
}

message ServerStatus {
  string message = 1;
}
